# get_stock

./: .gitignore  README.md  pyproject.toml  read.py  requirements.txt  run.bat  safe_git_pull.bat  setting.json  拉取程式碼(更新).bat
test/: entry.py  is_etf.py  realtime_error_catch.py  save_etf.py  sys_find.py
test/test_web/py/: base_information.py  玩股網.py
test_web/py/: 玩股網.py
股票/: stock_end.py
股票/function/: classification.py  excel_utils.py  get_stock.py  is_etf.py  realtime_market.py  rename_code_only_sheets.py  save_etf.py  settings_loader.py  stock_add_sheet.py  stock_cache.py  stock_end.py
